# projet_PA

./: AlgorithmeDescente.cpp  AlgorithmeDescente.h  CMakeLists.txt  City.cpp  City.h  Instance.cpp  Instance.h  Iteree.cpp  Iteree.h  MeilleureAmeliorante.cpp  MeilleureAmeliorante.h  NeighbourEchange.cpp  NeighbourEchange.h  NeighbourReinsertion.cpp  NeighbourReinsertion.h  NeighbourSolution.cpp  NeighbourSolution.h  NeighbourTwoOpt.cpp  NeighbourTwoOpt.h  PerturberForce.cpp  PerturberForce.h  PremiereAmeliorante.cpp  PremiereAmeliorante.h  PremiereAmelioranteAleatoire.cpp  PremiereAmelioranteAleatoire.h  RechercheLocale.cpp  RechercheLocale.h  Solutions.cpp  Solutions.h  VoisinageVariable.cpp  VoisinageVariable.h  main.cpp
ressources/solutions/: Glouton10  solution_test + 10  solution_test_200
